--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:16.04
+FROM ubuntu:18.04
 MAINTAINER team@desertbit.com
 
 # Ensure /scripts is always first.
@@ -10,42 +10,24 @@ RUN apt-get -y update && \
         ca-certificates \
         build-essential autoconf autogen gcc gperf bison flex texinfo help2man make \
         libncurses5-dev python-dev libtool-bin bzip2 xz-utils unzip gawk \
-        openssl \
+        openssl cmake ninja-build \
         sudo git wget curl nano && \
     apt-get -y clean
 
-# Install cmake
-RUN mkdir -p /tmp/cmake && \
-    cd /tmp/cmake && \
-    wget -O cmake.tar.gz https://www.cmake.org/files/v3.13/cmake-3.13.1.tar.gz && \
-    echo "befe1ce6d672f2881350e94d4e3cc809697dd2c09e5b708b76c1dae74e1b2210  cmake.tar.gz" | sha256sum -c && \
-    tar xf cmake.tar.gz && \
-    cd cmake-3.13.1 && \
-    ./configure && \
-    make -j$(grep -c processor /proc/cpuinfo) && \
-    make install && \
-    rm -rf /tmp/cmake
-
 # Setup cmake
-ADD cmake.sh /scripts/cmake
-RUN chmod +x /scripts/cmake
+ADD cmake.sh  /scripts/cmake
+ADD ccmake.sh /scripts/ccmake
+RUN chmod +x  /scripts/cmake && \
+    chmod +x  /scripts/ccmake
 ENV CMAKE_TOOLCHAIN_FILE=/etc/toolchain.cmake
 
-# Install ninja
-RUN mkdir -p /tmp/ninja && \
-    cd /tmp/ninja && \
-    git clone git://github.com/ninja-build/ninja.git && \
-    cd ninja && \
-    git checkout release && \
-    python ./configure.py --bootstrap && ./ninja && \
-    cp ./ninja /usr/bin/ && \
-    rm -rf /tmp/ninja
-
 # Install the Go compiler
-RUN mkdir -p /tmp/go && \
+RUN export GO_VERSION="1.11.2" && \
+    export GO_CHECKSUM="1dfe664fa3d8ad714bbd15a36627992effd150ddabd7523931f077b3926d736d" && \
+    mkdir -p /tmp/go && \
     cd /tmp/go && \
-    wget -O go.tar.gz https://dl.google.com/go/go1.11.2.linux-amd64.tar.gz && \
-    echo "1dfe664fa3d8ad714bbd15a36627992effd150ddabd7523931f077b3926d736d  go.tar.gz" | sha256sum -c && \
+    wget -O go.tar.gz https://dl.google.com/go/go${GO_VERSION}.linux-amd64.tar.gz && \
+    echo "${GO_CHECKSUM}  go.tar.gz" | sha256sum -c && \
     tar -xvf go.tar.gz && \
     mv go /usr/local && \
     rm -rf /tmp/go
@@ -56,7 +38,8 @@ ENV PATH=$GOROOT/bin:$PATH
 ENV GOPATH=/work
 
 # Install crosstool-NG
-RUN mkdir -p /tmp/crosstool-ng && \
+RUN export NUM_CORES="$(grep -c processor /proc/cpuinfo)" && \
+    mkdir -p /tmp/crosstool-ng && \
     cd /tmp/crosstool-ng && \
     git clone https://github.com/crosstool-ng/crosstool-ng.git && \
     cd crosstool-ng && \
@@ -65,7 +48,7 @@ RUN mkdir -p /tmp/crosstool-ng && \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info && \
-    make && \
+    make -j${NUM_CORES} && \
     make install && \
     rm -rf /tmp/crosstool-ng
 
