--- a/linux-armv7/Dockerfile
+++ b/linux-armv7/Dockerfile
@@ -1,11 +1,6 @@
 FROM desertbit/crossbuild:base
 MAINTAINER team@desertbit.com
 
-ADD toolchain.cmake /etc/toolchain.cmake
-
-RUN sudo -H -u builder sh -c "ct-ng armv7-rpi2-linux-gnueabihf && ct-ng build.$(grep -c processor /proc/cpuinfo)" && \
-    rm -rf /home/builder/x-tools/armv7-rpi2-linux-gnueabihf/build.log*
-
 ENV CROSS_TRIPLE=armv7-rpi2-linux-gnueabihf
 ENV CROSS_ROOT=/home/builder/x-tools/${CROSS_TRIPLE}
 ENV AS=${CROSS_ROOT}/bin/${CROSS_TRIPLE}-as \
@@ -20,3 +15,11 @@ ENV CGO_ENABLED=1
 ENV GOOS=linux
 ENV GOARCH=arm
 ENV GOARM=7
+
+ADD toolchain.cmake /etc/toolchain.cmake
+
+RUN export NUM_CORES="$(grep -c processor /proc/cpuinfo)" && \
+    sudo -H -u builder sh -c "ct-ng ${CROSS_TRIPLE} && ct-ng build.${NUM_CORES}" && \
+    rm -rf "${CROSS_ROOT}"/build.log*
+
+WORKDIR /work
